kubernetes/mini/.archive/ersatztv/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ersatztv
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8409"
              protocol: TCP
